tests/fixtures/errors/unknown_variant.ksr
index Phase = { Coast, Burn }
param x: Dimensionless[Phase] = {
    Phase::Coast: 1.0,
    Phase::Burn: 2.0,
};
node bad: Dimensionless = @x[Phase::NoSuch];
